--- a/views/usersListPage_admin.ejs
+++ b/views/usersListPage_admin.ejs
@@ -26,62 +26,82 @@
     <!-- Navbar - imported from /partials -->
     <%- include('partials/_navbar_admin')%>
 
+    <!-- Helper function to convert date from YYYY-MM-DD to DD-MM-YYYY -->
+    <% function dateConversion(dateInYMD){
+      const parts = dateInYMD.split('-')
+      const dateInDMY = `${parts[2]}-${parts[1]}-${parts[0]}`
+      return dateInDMY;
+    }%>
 
-    <!-- User Information Template -->
-    <div class="container my-5">
-  
-      <!-- TABLE VIEW - For Medium & Large Screens -->
-      <div class="user-table">
-        <table class="table table-column-striped table-hover align-middle">
-          <thead class="table-secondary table-danger">
-            <tr>
-              <th colspan="2" scope="col" style="text-align: center;">User</th>
-              <th>Role</th>
-              <th>Status</th>
-              <th>Signup Date</th>
-              <th>Actions</th>
-            </tr>
-          </thead>
-          <tbody class="table-group-divider">
-            <tr>
-              <td><img src="https://i.pravatar.cc/40?" class="rounded-circle img-fluid"></td>
-              <td>(User name)</td>
-              <td>(User role)</td>
-              <td><span class="badge bg-success">Active</span></td>
-              <td>(User join date in DD-MM-YYYY)</td>
-              <td>
-                <button class="btn btn-sm btn-primary">Restrict</button>
-                <button class="btn btn-sm btn-danger">Delete</button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-  
-      <!-- CARD VIEW - For Small Screens -->
-      <div class="user-cards">
-        <div class="card mb-3">
-          <div class="card-body">
-            <div class="d-flex align-items-center">
-              <img src="https://i.pravatar.cc/40?" class="rounded-circle me-4">
-              <div>
-                <h6 class="mb-0">(User Name)</h6>
-              </div>
-            </div>
-            <div class="mt-3">
-              <span class="badge bg-success">Active</span>
-              <span class="badge bg-secondary">User</span>
-              <small class="d-block mt-1">(User join date in DD-MM-YYYY)</small>
-              <div class="mt-2">
-                <button class="btn btn-sm btn-primary">Restrict</button>
-                <button class="btn btn-sm btn-danger">Delete</button>
-              </div>
-            </div>
+    <%if(userInfo.length > 0){%>
+
+      
+        <!-- User Information Template -->
+        <div class="container my-5">
+        
+          <!-- TABLE VIEW - For Medium & Large Screens -->
+          <div class="user-table">
+            <table class="table table-column-striped table-hover align-middle">
+              <thead class="table-secondary table-danger">
+                <tr>
+                  <th colspan="2" scope="col" style="text-align: center;">User</th>
+                  <th>Role</th>
+                  <th>Status</th>
+                  <th>Signup Date</th>
+                  <th>Actions</th>
+                </tr>
+              </thead>
+
+              <%userInfo.forEach(function(user){%>
+
+                <tbody>
+                  <tr>
+                    <td><img src="https://i.pravatar.cc/50?random=<%= user._id%>" class="rounded-circle img-fluid"></td>
+                    <td><%=user.username%></td>
+                    <td><%=user.role%></td>
+                    <td><span class="badge bg-success">Active</span></td>
+                    <td><%=dateConversion(user.createdAt.toISOString().substring(0,10))%></td>
+                    <td>
+                      <button class="btn btn-sm btn-primary">Restrict</button>
+                      <button class="btn btn-sm btn-danger">Delete</button>
+                    </td>
+                  </tr>
+                </tbody>
+
+                <!-- CARD VIEW - For Small Screens -->
+                <div class="user-cards">
+                  <div class="card mb-3">
+                    <div class="card-body">
+                      <div class="d-flex align-items-center">
+                        <img src="https://i.pravatar.cc/40?random=<%= user._id%>" class="rounded-circle me-4">
+                        <div>
+                          <h6 class="mb-0"><%=user.username%></h6>
+                        </div>
+                      </div>
+                      <div class="mt-3">
+                        <span class="badge bg-success">Active</span>
+                        <span class="badge bg-secondary"><%=user.role%></span>
+                        <small class="d-block mt-1">Signup Date  <%= dateConversion(user.createdAt.toISOString().substring(0,10)) %></small>
+                        <div class="mt-2">
+                          <button class="btn btn-sm btn-primary">Restrict</button>
+                          <button class="btn btn-sm btn-danger">Delete</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+              <%})%>
+
+            </table>
           </div>
         </div>
-      </div>
-  
-    </div>
+    <%} else {%>
+      <p>No users found</p>
+    <%}%>
+        
+
+
   
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
